# event-source

./: Cargo.toml  README.md
examples/: main.rs
src/: __private.rs  future.rs  lib.rs  sealed.rs  types.rs
