[package]
name = "event-source"
description = "Zero cost async immediate event dispatching"
version = "0.4.1"
edition = "2021"
license = "MIT"
authors = ["storycraft <storycraft@pancake.sh>"]
repository = "https://github.com/storycraft/event-source"
keywords = ["event", "async"]
categories = ["asynchronous"]

[dependencies]
higher-kinded-types = "0.1.1"
parking_lot = "0.12.1"
pin-list = "0.1.0"
pin-project-lite = "0.2.13"
sync_wrapper = "0.1.2"
unique = "0.9.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
